<resources>
    <string name="app_name">Man Go</string>

    <string name="splash_text">This is a Splash Screen</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="username_login"> </string>
    <string name="password_login"> </string>

    <string name="main_menu">Main Menu</string>
    <string name="user_login">User Login</string>

    <string name="main_account">Account</string>
    <string name="main_inbox">Inbox</string>

    <string name="register_email">E-mail:</string>
    <string name="register_email_hint">E-mail</string>
    <string name="register_phone">Phone:</string>
    <string name="register_phone_hint">Phone</string>
    <string name="register_password">Password:</string>
    <string name="register_password_hint">Password</string>

    <string name="login_loginBtn">loginBtn</string>
    <string name="login_registerBtn">login_registerBtn</string>
    <string name="register_registerBtn">register_registerBtn</string>

    <string name="driver_online">online</string>
    <string name="driver_offline">offline</string>

    <string name="user">User</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="account">Account</string>
    <string name="inbox">inbox</string>
    <string name="ride_history">Ride History</string>
    <string name="home">Home</string>
    <string name="home_long">Map</string>
    <string name="account_long">Change your account</string>
    <string name="inbox_long">Read your messages</string>
    <string name="ride_history_long">See your past rides</string>

    <string name="description">Description</string>
    <string name="line1">Line1</string>
    <string name="line2">Line2</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="mango">Modern\nAffordable\nNecessary</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>

    <string name="create_account">CREATE ACCOUNT</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="address">Address</string>
    <string name="terms_and_conditions">Agree to terms and conditions</string>
    <string name="have_an_account">Already have an account?</string>

    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="messages">Messages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conversations">Conversations</string>
    <string name="customer_support">Customer support</string>

    <string name="where_are_you_going">Where are you going?</string>
    <string name="set_route">SET ROUTE</string>
    <string name="ride_details">Ride details</string>
    <string name="find_vehicle">FIND VEHICLE </string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="standard">STANDARD</string>
    <string name="luxury">LUXURY</string>
    <string name="van">VAN</string>
    <string name="reserve_ride">Reserve ride?</string>
    <string name="transporting_pets">Transporting pets?</string>
    <string name="transporting_babies">Transporting babies?</string>
    <string name="your_current_ride">Your current ride</string>
    <string name="end_ride">End ride</string>
    <string name="string_my_profile">My profile</string>
    <string name="first_last_name">First and Last name</string>
    <string name="phone_number">+381600538922</string>
    <string name="generate_report">Generate report</string>
    <string name="save">Save</string>
    <string name="generate_stats">Generate stats</string>
    <color name="white">#FFFFFF</color>
    <string name="title_activity_driver_account_edit">DriverAccountEditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>

    <string name="rides_declined">Rides Declined:</string>
    <string name="rides_accepted">Rides Accepted:</string>
    <string name="work_hours">Work Hours:</string>
    <string name="pay">Pay:</string>

    <string name="startDate">Start Date:</string>
    <string name="endDate">End Date:</string>
</resources>