<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.passenger.PassengerHomeDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="52sp"
            android:layout_height="32sp"
            android:layout_weight="1"
            android:alpha="0.6"
            android:background="@drawable/previous_icon"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ride_details"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/dark_gray"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/standard"
                android:buttonTint="@color/mango_yellow"/>

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luxury"
                android:buttonTint="@color/mango_yellow"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/van"
                android:buttonTint="@color/mango_yellow"
                />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transporting_pets"
            android:layoutDirection="rtl"
            android:buttonTint="@color/mango_yellow" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transporting_babies"
            android:layoutDirection="rtl"
            android:buttonTint="@color/mango_yellow"
            />

    </LinearLayout>




</TableLayout>