<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".activity.driver.DriverAccountActivity"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5"
            android:gravity="center"
            android:text="@string/string_my_profile"
            android:textColor="@color/black"
            android:textSize="40dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="#00000000"
            app:srcCompat="@drawable/edit_icon"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/registration_profile_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/profile_mock"
        app:civ_border_color="@color/mango_yellow"
        app:civ_border_width="10dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.8"
        android:drawableStart="@drawable/person_icon"
        android:gravity="left"
        android:text="@string/first_last_name"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.8"
        android:drawableStart="@drawable/phone_icon"
        android:gravity="left"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.8"
        android:drawableStart="@drawable/location_icon"
        android:gravity="left"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.8"
        android:drawableStart="@drawable/email_icon"
        android:gravity="left"
        android:text="@string/register_email_hint"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mango_yellow"
        android:drawableStart="@drawable/report_icon"
        android:text="@string/generate_report" />

    <Button
        android:id="@+id/buttonStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mango_yellow"
        android:drawableStart="@drawable/report_icon"
        android:text="@string/generate_stats" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottonnav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="120dp"
        android:background="@color/mango_yellow"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/navbar_colors"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navbar"></com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>