<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".activity.driver.DriverAccountReportActivity">


    <TextView
        android:id="@+id/startDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="TextView"
        tools:text="@string/startDate" />

    <EditText
        android:id="@+id/startDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/endDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="TextView"
        tools:text="@string/endDate" />

    <EditText
        android:id="@+id/endDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:ems="10"
        android:inputType="date" />

    <RadioGroup
        android:id="@+id/vehicle_type"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/mango_yellow"
            android:checked="true"
            android:gravity="center"
            android:text="@string/standard"
            android:textColor="#3E3E3E" />

        <RadioButton
            android:id="@+id/luxury"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/mango_yellow"
            android:text="@string/luxury"
            android:textColor="#3E3E3E" />

        <RadioButton
            android:id="@+id/van"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/mango_yellow"
            android:text="@string/van"
            android:textColor="#3E3E3E" />
    </RadioGroup>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottonnav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/mango_yellow"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/navbar_colors"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navbar"></com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>